# systematic-alpha-lab

./: .gitignore  GITHUB_PORTFOLIO_ROADMAP.md  README.md  pyproject.toml
config/: datalist.yml
config/alpha/: config.json
config/factors/: config.json
docs/: architecture.md  research_workflow.md  roadmap.md
examples/: consolidated_import_demo.py  synthetic_equity_alpha_demo.py
notebooks/: 01_consolidated_platform_demo.ipynb
src/systematic_alpha_lab/: __init__.py
src/systematic_alpha_lab/agents/: __init__.py
src/systematic_alpha_lab/alpha/: __init__.py  alpha_engine.py  alpha_preprocessing.py  data_loader.py  evaluate.py  pipeline.py  preprocess.py  weighting.py
src/systematic_alpha_lab/backtest/: __init__.py
src/systematic_alpha_lab/core/: __init__.py  artifacts.py
src/systematic_alpha_lab/data_pipeline/: __init__.py  alpha_vantage_mcp.py  alpha_vantage_rest.py  config_loader.py  failure_utils.py  final_data.py  ingestion.py  logging_utils.py  paths.py  quality.py  raw_to_processed.py  transform.py  wrds_client.py
src/systematic_alpha_lab/factor_research/: __init__.py  analytics.py  base.py  composite.py  data_loader.py  factor_cleaning.py  factor_definitions.py  paths.py  run_factors.py  transforms.py
src/systematic_alpha_lab/factor_research/factors/: __init__.py  atr.py  (+54 more)
src/systematic_alpha_lab/portfolio/: __init__.py
src/systematic_alpha_lab/reporting/: __init__.py
src/systematic_alpha_lab/risk/: __init__.py
src/systematic_alpha_lab/workflows/: __init__.py  synthetic_equity_alpha.py
tests/: test_imports.py  test_synthetic_workflow.py
