[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "systematic-alpha-lab"
version = "0.1.0"
description = "AI-assisted systematic alpha research platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=11",
    "requests>=2.31",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "PyYAML>=6.0",
    "wrds>=3.1",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
